fix logo back on small tablet size

--- a/styles/index.css
+++ b/styles/index.css
@@ -290,7 +290,7 @@ body {
 }
 
 
-@media only screen and (max-width: 499px) {
+@media only screen and (max-width: 767px) {
   /* body {
     overflow-x: hidden;
   } */
